--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -593,6 +593,7 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgb(247 247 247 / var(--tw-bg-opacity));
   font-family: Inter;
+  letter-spacing: -0.0125rem;
   --tw-text-opacity: 1;
   color: rgb(28 28 28 / var(--tw-text-opacity));
 }
@@ -664,6 +665,9 @@ body{
 .mt-10{
   margin-top: 2.5rem;
 }
+.mt-15{
+  margin-top: 0.9375rem;
+}
 .mt-2{
   margin-top: 0.5rem;
 }
@@ -714,6 +718,12 @@ body{
 }
 .aspect-\[350\/256\]{
   aspect-ratio: 350/256;
+}
+.aspect-\[360\/240\]{
+  aspect-ratio: 360/240;
+}
+.aspect-\[430\/303\]{
+  aspect-ratio: 430/303;
 }
 .aspect-\[445\/362\]{
   aspect-ratio: 445/362;
@@ -785,6 +795,9 @@ body{
 .h-42{
   height: 2.625rem;
 }
+.h-5{
+  height: 1.25rem;
+}
 .h-50{
   height: 3.125rem;
 }
@@ -800,12 +813,21 @@ body{
 .h-\[1\.375rem\]{
   height: 1.375rem;
 }
+.h-full{
+  height: 100%;
+}
 .h-max{
   height: -moz-max-content;
   height: max-content;
 }
 .w-1\/2{
   width: 50%;
+}
+.w-10{
+  width: 2.5rem;
+}
+.w-20{
+  width: 5rem;
 }
 .w-3{
   width: 0.75rem;
@@ -822,6 +844,9 @@ body{
 .w-5{
   width: 1.25rem;
 }
+.w-6{
+  width: 1.5rem;
+}
 .w-auto{
   width: auto;
 }
@@ -833,7 +858,13 @@ body{
   width: max-content;
 }
 .min-w-60{
-  min-width: 3.75rem;
+  min-width: 15rem;
+}
+.min-w-72{
+  min-width: 18rem;
+}
+.min-w-\[16\.625rem\]{
+  min-width: 16.625rem;
 }
 .max-w-40{
   max-width: 10rem;
@@ -841,29 +872,44 @@ body{
 .max-w-5xl{
   max-width: 64rem;
 }
+.max-w-80{
+  max-width: 20rem;
+}
 .max-w-\[15\.9375rem\]{
   max-width: 15.9375rem;
 }
 .max-w-\[16\.25rem\]{
   max-width: 16.25rem;
 }
+.max-w-\[20\.5rem\]{
+  max-width: 20.5rem;
+}
 .max-w-\[27\.8125rem\]{
   max-width: 27.8125rem;
+}
+.max-w-\[31\.75rem\]{
+  max-width: 31.75rem;
+}
+.max-w-\[37\.6875rem\]{
+  max-width: 37.6875rem;
 }
 .max-w-\[40\.1875rem\]{
   max-width: 40.1875rem;
 }
+.max-w-\[48\.5625rem\]{
+  max-width: 48.5625rem;
+}
+.max-w-\[57\.5rem\]{
+  max-width: 57.5rem;
+}
 .max-w-\[57\.9375rem\]{
   max-width: 57.9375rem;
 }
+.max-w-\[61\.4375rem\]{
+  max-width: 61.4375rem;
+}
 .max-w-base{
   max-width: 72.875rem;
-}
-.max-w-\[20\.5rem\]{
-  max-width: 20.5rem;
-}
-.max-w-\[37\.6875rem\]{
-  max-width: 37.6875rem;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -929,8 +975,9 @@ body{
 .gap-5{
   gap: 1.25rem;
 }
-.gap-8{
-  gap: 2rem;
+.gap-x-10{
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
 }
 .gap-x-2{
   -moz-column-gap: 0.5rem;
@@ -939,6 +986,10 @@ body{
 .gap-x-3\.5{
   -moz-column-gap: 0.875rem;
        column-gap: 0.875rem;
+}
+.gap-x-30{
+  -moz-column-gap: 1.875rem;
+       column-gap: 1.875rem;
 }
 .gap-x-4{
   -moz-column-gap: 1rem;
@@ -952,15 +1003,20 @@ body{
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
 }
+.gap-x-8{
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
 .gap-y-4{
   row-gap: 1rem;
 }
 .gap-y-5{
   row-gap: 1.25rem;
 }
-.gap-x-8{
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
@@ -971,11 +1027,6 @@ body{
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-}
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 .overflow-hidden{
   overflow: hidden;
@@ -1010,6 +1061,9 @@ body{
 .border-b{
   border-bottom-width: 1px;
 }
+.border-b-2{
+  border-bottom-width: 2px;
+}
 .border-l{
   border-left-width: 1px;
 }
@@ -1019,12 +1073,16 @@ body{
 .border-t{
   border-top-width: 1px;
 }
-.border-b-2{
-  border-bottom-width: 2px;
+.border-dashed{
+  border-style: dashed;
 }
 .border-brand-black-200{
   --tw-border-opacity: 1;
   border-color: rgb(228 228 228 / var(--tw-border-opacity));
+}
+.border-brand-black-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(150 150 150 / var(--tw-border-opacity));
 }
 .border-brand-green-200{
   --tw-border-opacity: 1;
@@ -1034,12 +1092,12 @@ body{
   --tw-border-opacity: 1;
   border-color: rgb(102 211 116 / var(--tw-border-opacity));
 }
-.border-transparent{
-  border-color: transparent;
-}
 .border-brand-green-400{
   --tw-border-opacity: 1;
   border-color: rgb(51 196 69 / var(--tw-border-opacity));
+}
+.border-transparent{
+  border-color: transparent;
 }
 .bg-\[\#F9BD13\]{
   --tw-bg-opacity: 1;
@@ -1052,6 +1110,10 @@ body{
 .bg-brand-black-100{
   --tw-bg-opacity: 1;
   background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+.bg-brand-green-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(178 232 185 / var(--tw-bg-opacity));
 }
 .bg-brand-green-400{
   --tw-bg-opacity: 1;
@@ -1131,6 +1193,12 @@ body{
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.pb-0\.5{
+  padding-bottom: 0.125rem;
+}
+.pb-1\.5{
+  padding-bottom: 0.375rem;
+}
 .pb-4{
   padding-bottom: 1rem;
 }
@@ -1142,6 +1210,9 @@ body{
 }
 .ps-19{
   padding-inline-start: 1.1875rem;
+}
+.pt-1\.5{
+  padding-top: 0.375rem;
 }
 .pt-10{
   padding-top: 2.5rem;
@@ -1157,9 +1228,6 @@ body{
 }
 .pt-5{
   padding-top: 1.25rem;
-}
-.pb-0\.5{
-  padding-bottom: 0.125rem;
 }
 .text-center{
   text-align: center;
@@ -1203,6 +1271,10 @@ body{
   font-size: 1rem;
   line-height: 1.25rem;
 }
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1231,6 +1303,9 @@ body{
 }
 .font-semibold{
   font-weight: 600;
+}
+.tracking-wides{
+  letter-spacing: -0.0125rem;
 }
 .text-\[\#323136\]{
   --tw-text-opacity: 1;
@@ -1291,9 +1366,6 @@ body{
 .underline{
   text-decoration-line: underline;
 }
-.decoration-brand-green-400{
-  text-decoration-color: #33C445;
-}
 .underline-offset-4{
   text-underline-offset: 4px;
 }
@@ -1321,6 +1393,7 @@ h2{
   font-size: 1.75rem;
   line-height: 2rem;
   font-weight: 600;
+  letter-spacing: 0em !important;
 }
 
 @media (min-width: 1024px){
@@ -1337,6 +1410,7 @@ h3{
   font-size: 1.25rem;
   line-height: 1.75rem;
   font-weight: 600;
+  letter-spacing: 0.2%;
 }
 
 
@@ -1494,9 +1568,19 @@ h3{
   }
 
 
+  .xs\:aspect-\[1110\/424\]{
+    aspect-ratio: 1110/424;
+  }
+
+
   .xs\:w-max{
     width: -moz-max-content;
     width: max-content;
+  }
+
+
+  .xs\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
 
@@ -1507,9 +1591,8 @@ h3{
 @media (min-width: 640px){
 
 
-  .sm\:mx-0{
-    margin-left: 0px;
-    margin-right: 0px;
+  .sm\:mt-4{
+    margin-top: 1rem;
   }
 
 
@@ -1528,11 +1611,6 @@ h3{
   }
 
 
-  .sm\:max-w-\[20\.5rem\]{
-    max-width: 20.5rem;
-  }
-
-
   .sm\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -1548,6 +1626,11 @@ h3{
   }
 
 
+  .sm\:whitespace-nowrap{
+    white-space: nowrap;
+  }
+
+
   .sm\:text-left{
     text-align: left;
   }
@@ -1559,6 +1642,12 @@ h3{
   }
 }
 @media (min-width: 768px){
+
+
+  .md\:-mx-0{
+    margin-left: -0px;
+    margin-right: -0px;
+  }
 
 
   .md\:-mx-7{
@@ -1597,7 +1686,24 @@ h3{
   }
 
 
+  .md\:aspect-\[350\/256\]{
+    aspect-ratio: 350/256;
+  }
+
+
+  .md\:size-12{
+    width: 3rem;
+    height: 3rem;
+  }
+
+
   .md\:size-60{
+    width: 15rem;
+    height: 15rem;
+  }
+
+
+  .md\:size-sixty{
     width: 3.75rem;
     height: 3.75rem;
   }
@@ -1608,8 +1714,18 @@ h3{
   }
 
 
+  .md\:h-7{
+    height: 1.75rem;
+  }
+
+
   .md\:w-1\/2{
     width: 50%;
+  }
+
+
+  .md\:w-8{
+    width: 2rem;
   }
 
 
@@ -1618,8 +1734,28 @@ h3{
   }
 
 
+  .md\:min-w-80{
+    min-width: 20rem;
+  }
+
+
+  .md\:min-w-96{
+    min-width: 24rem;
+  }
+
+
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+
   .md\:flex-row{
     flex-direction: row;
+  }
+
+
+  .md\:gap-2{
+    gap: 0.5rem;
   }
 
 
@@ -1631,11 +1767,6 @@ h3{
 
   .md\:p-6{
     padding: 1.5rem;
-  }
-
-
-  .md\:p-8{
-    padding: 2rem;
   }
 
 
@@ -1660,6 +1791,17 @@ h3{
   .md\:py-4{
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+
+  .md\:py-8{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+
+  .md\:pl-0{
+    padding-left: 0px;
   }
 
 
@@ -1693,6 +1835,11 @@ h3{
   }
 
 
+  .lg\:mt-10{
+    margin-top: 2.5rem;
+  }
+
+
   .lg\:mt-11{
     margin-top: 2.75rem;
   }
@@ -1718,8 +1865,8 @@ h3{
   }
 
 
-  .lg\:mt-9{
-    margin-top: 2.25rem;
+  .lg\:mt-7{
+    margin-top: 1.75rem;
   }
 
 
@@ -1728,8 +1875,8 @@ h3{
   }
 
 
-  .lg\:mt-10{
-    margin-top: 2.5rem;
+  .lg\:mt-9{
+    margin-top: 2.25rem;
   }
 
 
@@ -1781,6 +1928,16 @@ h3{
   }
 
 
+  .lg\:h-\[2\.375rem\]{
+    height: 2.375rem;
+  }
+
+
+  .lg\:w-24{
+    width: 6rem;
+  }
+
+
   .lg\:w-full{
     width: 100%;
   }
@@ -1791,8 +1948,23 @@ h3{
   }
 
 
+  .lg\:min-w-\[33\.75rem\]{
+    min-width: 33.75rem;
+  }
+
+
   .lg\:max-w-\[21\.875rem\]{
     max-width: 21.875rem;
+  }
+
+
+  .lg\:max-w-\[26\.875rem\]{
+    max-width: 26.875rem;
+  }
+
+
+  .lg\:flex-none{
+    flex: none;
   }
 
 
@@ -1842,6 +2014,11 @@ h3{
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+
+  .lg\:border-t{
+    border-top-width: 1px;
   }
 
 
@@ -1903,6 +2080,11 @@ h3{
   }
 
 
+  .lg\:pr-2{
+    padding-right: 0.5rem;
+  }
+
+
   .lg\:pr-5{
     padding-right: 1.25rem;
   }
@@ -1918,6 +2100,11 @@ h3{
   }
 
 
+  .lg\:pt-8{
+    padding-top: 2rem;
+  }
+
+
   .lg\:text-13{
     font-size: 0.8125rem;
     line-height: 0.9375rem;
@@ -1927,6 +2114,12 @@ h3{
   .lg\:text-15{
     font-size: 0.9375rem;
     line-height: 1.375rem;
+  }
+
+
+  .lg\:text-28{
+    font-size: 1.75rem;
+    line-height: 2rem;
   }
 
 
@@ -1960,9 +2153,21 @@ h3{
   }
 
 
+  .lg\:text-base\/\[1\.21rem\]{
+    font-size: 1rem;
+    line-height: 1.21rem;
+  }
+
+
   .lg\:text-sm\/4{
     font-size: 0.875rem;
     line-height: 1rem;
+  }
+
+
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
 
@@ -1972,9 +2177,9 @@ h3{
   }
 
 
-  .lg\:text-base\/\[1\.21rem\]{
-    font-size: 1rem;
-    line-height: 1.21rem;
+  .lg\:text-xl\/6{
+    font-size: 1.25rem;
+    line-height: 1.5rem;
   }
 }
 @media (min-width: 1280px){
