--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -597,6 +597,44 @@ body{
   --tw-text-opacity: 1;
   color: rgb(28 28 28 / var(--tw-text-opacity));
 }
+.container{
+  width: 100%;
+}
+@media (min-width: 576px){
+
+
+  .container{
+    max-width: 576px;
+  }
+}
+@media (min-width: 640px){
+
+
+  .container{
+    max-width: 640px;
+  }
+}
+@media (min-width: 768px){
+
+
+  .container{
+    max-width: 768px;
+  }
+}
+@media (min-width: 1024px){
+
+
+  .container{
+    max-width: 1024px;
+  }
+}
+@media (min-width: 1280px){
+
+
+  .container{
+    max-width: 1280px;
+  }
+}
 .sr-only{
   position: absolute;
   width: 1px;
@@ -624,11 +662,23 @@ body{
 .end-1{
   inset-inline-end: 0.25rem;
 }
+.left-0{
+  left: 0px;
+}
 .start-0{
   inset-inline-start: 0px;
 }
+.top-0{
+  top: 0px;
+}
 .top-1\/2{
   top: 50%;
+}
+.z-0{
+  z-index: 0;
+}
+.z-20{
+  z-index: 20;
 }
 .order-last{
   order: 9999;
@@ -646,6 +696,12 @@ body{
 }
 .mb-2{
   margin-bottom: 0.5rem;
+}
+.mb-2\.5{
+  margin-bottom: 0.625rem;
+}
+.ml-1{
+  margin-left: 0.25rem;
 }
 .ml-2{
   margin-left: 0.5rem;
@@ -728,6 +784,9 @@ body{
 .aspect-\[445\/362\]{
   aspect-ratio: 445/362;
 }
+.aspect-\[730\/512\]{
+  aspect-ratio: 730/512;
+}
 .aspect-square{
   aspect-ratio: 1 / 1;
 }
@@ -758,6 +817,10 @@ body{
   width: 8rem;
   height: 8rem;
 }
+.size-4{
+  width: 1rem;
+  height: 1rem;
+}
 .size-42{
   width: 2.625rem;
   height: 2.625rem;
@@ -773,6 +836,10 @@ body{
 .size-full{
   width: 100%;
   height: 100%;
+}
+.size-3{
+  width: 0.75rem;
+  height: 0.75rem;
 }
 .h-10{
   height: 2.5rem;
@@ -813,12 +880,18 @@ body{
 .h-\[1\.375rem\]{
   height: 1.375rem;
 }
+.h-\[4\.75rem\]{
+  height: 4.75rem;
+}
 .h-full{
   height: 100%;
 }
 .h-max{
   height: -moz-max-content;
   height: max-content;
+}
+.max-h-\[32rem\]{
+  max-height: 32rem;
 }
 .w-1\/2{
   width: 50%;
@@ -881,6 +954,9 @@ body{
 .max-w-\[16\.25rem\]{
   max-width: 16.25rem;
 }
+.max-w-\[20\.3125rem\]{
+  max-width: 20.3125rem;
+}
 .max-w-\[20\.5rem\]{
   max-width: 20.5rem;
 }
@@ -919,6 +995,9 @@ body{
 }
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .cursor-pointer{
@@ -1018,6 +1097,11 @@ body{
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1052,11 +1136,18 @@ body{
 .rounded-sm{
   border-radius: 0.125rem;
 }
+.\!rounded-md{
+  border-radius: 0.375rem !important;
+}
 .border{
   border-width: 1px;
 }
 .border-2{
   border-width: 2px;
+}
+.border-y{
+  border-top-width: 1px;
+  border-bottom-width: 1px;
 }
 .border-b{
   border-bottom-width: 1px;
@@ -1149,6 +1240,10 @@ body{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
+.px-1\.5{
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+}
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1193,6 +1288,14 @@ body{
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
 .pb-0\.5{
   padding-bottom: 0.125rem;
 }
@@ -1202,8 +1305,14 @@ body{
 .pb-4{
   padding-bottom: 1rem;
 }
+.pl-3{
+  padding-left: 0.75rem;
+}
 .pl-4{
   padding-left: 1rem;
+}
+.pr-3{
+  padding-right: 0.75rem;
 }
 .ps-12{
   padding-inline-start: 3rem;
@@ -1304,12 +1413,19 @@ body{
 .font-semibold{
   font-weight: 600;
 }
+.leading-6{
+  line-height: 1.5rem;
+}
 .tracking-wides{
   letter-spacing: -0.0125rem;
 }
 .text-\[\#323136\]{
   --tw-text-opacity: 1;
   color: rgb(50 49 54 / var(--tw-text-opacity));
+}
+.text-\[\#FA3434\]{
+  --tw-text-opacity: 1;
+  color: rgb(250 52 52 / var(--tw-text-opacity));
 }
 .text-black{
   --tw-text-opacity: 1;
@@ -1514,6 +1630,10 @@ h3{
 .hover\:border-transparent:hover{
   border-color: transparent;
 }
+.hover\:bg-brand-green-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 181 23 / var(--tw-bg-opacity));
+}
 .hover\:bg-gray-100:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1587,6 +1707,12 @@ h3{
   .xs\:flex-col{
     flex-direction: column;
   }
+
+
+  .xs\:py-3{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
 }
 @media (min-width: 640px){
 
@@ -1613,6 +1739,11 @@ h3{
 
   .sm\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
 
@@ -1697,12 +1828,6 @@ h3{
   }
 
 
-  .md\:size-60{
-    width: 15rem;
-    height: 15rem;
-  }
-
-
   .md\:size-sixty{
     width: 3.75rem;
     height: 3.75rem;
@@ -1749,8 +1874,18 @@ h3{
   }
 
 
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+
   .md\:flex-row{
     flex-direction: row;
+  }
+
+
+  .md\:items-center{
+    align-items: center;
   }
 
 
@@ -1765,8 +1900,19 @@ h3{
   }
 
 
+  .md\:whitespace-nowrap{
+    white-space: nowrap;
+  }
+
+
   .md\:p-6{
     padding: 1.5rem;
+  }
+
+
+  .md\:px-30{
+    padding-left: 1.875rem;
+    padding-right: 1.875rem;
   }
 
 
@@ -1807,6 +1953,11 @@ h3{
 
   .md\:pl-7{
     padding-left: 1.75rem;
+  }
+
+
+  .md\:text-left{
+    text-align: left;
   }
 
 
@@ -1918,6 +2069,12 @@ h3{
   }
 
 
+  .lg\:size-12{
+    width: 3rem;
+    height: 3rem;
+  }
+
+
   .lg\:h-12{
     height: 3rem;
   }
@@ -1953,6 +2110,11 @@ h3{
   }
 
 
+  .lg\:max-w-350{
+    max-width: 21.875rem;
+  }
+
+
   .lg\:max-w-\[21\.875rem\]{
     max-width: 21.875rem;
   }
@@ -1965,6 +2127,11 @@ h3{
 
   .lg\:flex-none{
     flex: none;
+  }
+
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
 
@@ -2014,6 +2181,13 @@ h3{
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+
+  .lg\:space-y-5 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
   }
 
 
@@ -2180,6 +2354,12 @@ h3{
   .lg\:text-xl\/6{
     font-size: 1.25rem;
     line-height: 1.5rem;
+  }
+
+
+  .lg\:text-base\/\[1\.125rem\]{
+    font-size: 1rem;
+    line-height: 1.125rem;
   }
 }
 @media (min-width: 1280px){
