--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -983,6 +983,11 @@ body{
 .cursor-pointer{
   cursor: pointer;
 }
+.select-all{
+  -webkit-user-select: all;
+     -moz-user-select: all;
+          user-select: all;
+}
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1077,6 +1082,11 @@ body{
 }
 .gap-y-6{
   row-gap: 1.5rem;
+}
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-y-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
@@ -1606,6 +1616,37 @@ h3{
 }
 
 
+.checkbox-custom{
+  position: relative;
+  display: inline-block;
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 0.25rem;
+  border-width: 1px;
+  background-color: transparent;
+}
+
+.checkbox-custom:checked {
+  border-color: #424242;
+  --tw-border-opacity: 1;
+  border-color: rgb(27 27 31 / var(--tw-border-opacity))}
+
+.checkbox-custom:checked::after {
+  content: '';
+  transform: translate(-50%, -50%);
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M20.285 6.708l-11.145 11.145-5.145-5.145 1.415-1.414 3.729 3.728 9.732-9.732z"/></svg>');
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0.75rem;
+  height: 0.75rem;
+  background-size: contain;
+  background-repeat: no-repeat}
+
+
 .toggle-button::after {
   height: calc(100% - 5px);
   position: absolute;
@@ -1631,14 +1672,14 @@ h3{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-
-[type="checkbox"]:checked,
-[type="checkbox"]:not(:checked) {
+/* Faqat .custom-checkbox class uchun amal qiladi */
+.custom-checkbox:checked,
+.custom-checkbox:not(:checked) {
   display: none;
 }
 
-[type="checkbox"]:checked+label,
-[type="checkbox"]:not(:checked)+label{
+.custom-checkbox:checked+label,
+.custom-checkbox:not(:checked)+label{
   position: relative;
   display: inline-block;
   width: 1rem;
@@ -1647,8 +1688,8 @@ h3{
   overflow: hidden;
 }
 
-[type="checkbox"]:checked+label:before,
-[type="checkbox"]:not(:checked)+label:before {
+.custom-checkbox:checked+label:before,
+.custom-checkbox:not(:checked)+label:before {
   content: '';
   position: absolute;
   left: 0px;
@@ -1657,10 +1698,11 @@ h3{
   height: 1rem;
   border-radius: 0.125rem;
   border-width: 1px;
-  background-color: transparent}
+  background-color: transparent;
+}
 
-[type="checkbox"]:checked+label:after,
-[type="checkbox"]:not(:checked)+label:after {
+.custom-checkbox:checked+label:after,
+.custom-checkbox:not(:checked)+label:after {
   content: '';
   position: absolute;
   left: 50%;
@@ -1672,15 +1714,19 @@ h3{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
   border-radius: 1px;
   --tw-bg-opacity: 1;
-  background-color: rgb(51 196 69 / var(--tw-bg-opacity))}
+  background-color: rgb(51 196 69 / var(--tw-bg-opacity));
+}
 
-[type="checkbox"]:not(:checked)+label:after {
+.custom-checkbox:not(:checked)+label:after {
   transform: scale(0);
-  opacity: 0}
+  opacity: 0;
+}
 
-[type="checkbox"]:checked+label:after {
+.custom-checkbox:checked+label:after {
   transform: scale(1);
-  opacity: 1}
+  opacity: 1;
+}
+
 
 
 /* Scroll styles */
