--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -627,6 +627,12 @@ body{
 .left-0{
   left: 0px;
 }
+.left-4{
+  left: 1rem;
+}
+.right-2{
+  right: 0.5rem;
+}
 .start-0{
   inset-inline-start: 0px;
 }
@@ -653,6 +659,9 @@ body{
   margin-left: auto;
   margin-right: auto;
 }
+.\!mt-4{
+  margin-top: 1rem !important;
+}
 .mb-0\.5{
   margin-bottom: 0.125rem;
 }
@@ -676,6 +685,9 @@ body{
 }
 .ml-9{
   margin-left: 2.25rem;
+}
+.ml-auto{
+  margin-left: auto;
 }
 .mr-5{
   margin-right: 1.25rem;
@@ -725,6 +737,9 @@ body{
 .block{
   display: block;
 }
+.inline-block{
+  display: inline-block;
+}
 .flex{
   display: flex;
 }
@@ -761,6 +776,9 @@ body{
 .aspect-video{
   aspect-ratio: 16 / 9;
 }
+.aspect-\[379\/346\]{
+  aspect-ratio: 379/346;
+}
 .size-10{
   width: 2.5rem;
   height: 2.5rem;
@@ -789,9 +807,17 @@ body{
   width: 8rem;
   height: 8rem;
 }
+.size-4{
+  width: 1rem;
+  height: 1rem;
+}
 .size-42{
   width: 2.625rem;
   height: 2.625rem;
+}
+.size-5{
+  width: 1.25rem;
+  height: 1.25rem;
 }
 .size-6{
   width: 1.5rem;
@@ -800,10 +826,6 @@ body{
 .size-8{
   width: 2rem;
   height: 2rem;
-}
-.size-\[7\.5rem\]{
-  width: 7.5rem;
-  height: 7.5rem;
 }
 .size-full{
   width: 100%;
@@ -820,6 +842,12 @@ body{
 }
 .h-2\.5{
   height: 0.625rem;
+}
+.h-20{
+  height: 5rem;
+}
+.h-38{
+  height: 2.375rem;
 }
 .h-4{
   height: 1rem;
@@ -848,8 +876,14 @@ body{
 .h-\[1\.375rem\]{
   height: 1.375rem;
 }
+.h-\[19\.75rem\]{
+  height: 19.75rem;
+}
 .h-\[4\.75rem\]{
   height: 4.75rem;
+}
+.h-\[7\.5625rem\]{
+  height: 7.5625rem;
 }
 .h-full{
   height: 100%;
@@ -910,6 +944,9 @@ body{
 .min-w-\[16\.625rem\]{
   min-width: 16.625rem;
 }
+.min-w-\[4\.875rem\]{
+  min-width: 4.875rem;
+}
 .max-w-40{
   max-width: 10rem;
 }
@@ -940,14 +977,14 @@ body{
 .max-w-\[31\.75rem\]{
   max-width: 31.75rem;
 }
-.max-w-\[37\.6875rem\]{
-  max-width: 37.6875rem;
-}
 .max-w-\[40\.1875rem\]{
   max-width: 40.1875rem;
 }
 .max-w-\[43\.0625rem\]{
   max-width: 43.0625rem;
+}
+.max-w-\[43\.625rem\]{
+  max-width: 43.625rem;
 }
 .max-w-\[45\.625rem\]{
   max-width: 45.625rem;
@@ -970,8 +1007,26 @@ body{
 .max-w-\[61\.4375rem\]{
   max-width: 61.4375rem;
 }
+.max-w-\[7\.5rem\]{
+  max-width: 7.5rem;
+}
 .max-w-base{
   max-width: 72.875rem;
+}
+.max-w-\[20\.625rem\]{
+  max-width: 20.625rem;
+}
+.max-w-\[20\.4375rem\]{
+  max-width: 20.4375rem;
+}
+.max-w-\[45\.875rem\]{
+  max-width: 45.875rem;
+}
+.max-w-96{
+  max-width: 24rem;
+}
+.max-w-350{
+  max-width: 21.875rem;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -985,6 +1040,9 @@ body{
 }
 .rotate-180{
   --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .cursor-pointer{
@@ -1010,8 +1068,14 @@ body{
 .flex-nowrap{
   flex-wrap: nowrap;
 }
+.place-content-center{
+  place-content: center;
+}
 .items-start{
   align-items: flex-start;
+}
+.items-end{
+  align-items: flex-end;
 }
 .items-center{
   align-items: center;
@@ -1049,6 +1113,12 @@ body{
 .gap-5{
   gap: 1.25rem;
 }
+.gap-6{
+  gap: 1.5rem;
+}
+.gap-7{
+  gap: 1.75rem;
+}
 .gap-x-10{
   -moz-column-gap: 2.5rem;
        column-gap: 2.5rem;
@@ -1056,6 +1126,10 @@ body{
 .gap-x-2{
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
+}
+.gap-x-2\.5{
+  -moz-column-gap: 0.625rem;
+       column-gap: 0.625rem;
 }
 .gap-x-3\.5{
   -moz-column-gap: 0.875rem;
@@ -1104,6 +1178,11 @@ body{
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+.space-y-3\.5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.875rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.875rem * var(--tw-space-y-reverse));
 }
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
@@ -1154,6 +1233,9 @@ body{
 .border-2{
   border-width: 2px;
 }
+.border-\[1\.5px\]{
+  border-width: 1.5px;
+}
 .border-y{
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -1184,6 +1266,10 @@ body{
   --tw-border-opacity: 1;
   border-color: rgb(150 150 150 / var(--tw-border-opacity));
 }
+.border-brand-gray-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(132 133 138 / var(--tw-border-opacity));
+}
 .border-brand-green-200{
   --tw-border-opacity: 1;
   border-color: rgb(178 232 185 / var(--tw-border-opacity));
@@ -1195,6 +1281,10 @@ body{
 .border-brand-green-400{
   --tw-border-opacity: 1;
   border-color: rgb(51 196 69 / var(--tw-border-opacity));
+}
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 .border-transparent{
   border-color: transparent;
@@ -1223,9 +1313,23 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgb(51 196 69 / var(--tw-bg-opacity));
 }
+.bg-brand-red{
+  --tw-bg-opacity: 1;
+  background-color: rgb(235 87 87 / var(--tw-bg-opacity));
+}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-\[\#020202\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 2 2 / var(--tw-bg-opacity));
+}
+.bg-\[\#020202\]\/50{
+  background-color: rgb(2 2 2 / 0.5);
+}
+.bg-\[\#020202\]\/20{
+  background-color: rgb(2 2 2 / 0.2);
 }
 .object-cover{
   -o-object-fit: cover;
@@ -1393,6 +1497,9 @@ body{
   font-size: 1.5rem;
   line-height: 2rem;
 }
+.text-\[0\.625rem\]{
+  font-size: 0.625rem;
+}
 .text-\[0\.625rem\]\/3{
   font-size: 0.625rem;
   line-height: .75rem;
@@ -1404,6 +1511,10 @@ body{
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
+}
+.text-base\/4{
+  font-size: 1rem;
+  line-height: 1rem;
 }
 .text-base\/5{
   font-size: 1rem;
@@ -1507,10 +1618,6 @@ body{
   --tw-text-opacity: 1;
   color: rgb(50 49 54 / var(--tw-text-opacity));
 }
-.text-brand-green-300{
-  --tw-text-opacity: 1;
-  color: rgb(102 211 116 / var(--tw-text-opacity));
-}
 .text-brand-green-400{
   --tw-text-opacity: 1;
   color: rgb(51 196 69 / var(--tw-text-opacity));
@@ -1529,6 +1636,9 @@ body{
 }
 .underline{
   text-decoration-line: underline;
+}
+.line-through{
+  text-decoration-line: line-through;
 }
 .underline-offset-4{
   text-underline-offset: 4px;
@@ -1549,12 +1659,20 @@ body{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-transform{
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .duration-200{
   transition-duration: 200ms;
 }
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 h2{
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 600;
   letter-spacing: 0em !important;
@@ -1622,12 +1740,25 @@ h3{
   border-color: rgb(88 87 87 / var(--tw-border-opacity));
 }
 
+/* Radio Input Styles */
+.cart-radio:checked+label div span{
+  display: block;
+}
+
+.cart-radio:checked+label div,
+.cart-radio:checked~label{
+  --tw-border-opacity: 1;
+  border-color: rgb(235 87 87 / var(--tw-border-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(235 87 87 / var(--tw-text-opacity));
+}
 
 .checkbox-custom{
   position: relative;
   display: inline-block;
   width: 1.25rem;
   height: 1.25rem;
+  min-width: 1.25rem;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -1792,21 +1923,37 @@ h3{
   --tw-text-opacity: 1;
   color: rgb(228 228 228 / var(--tw-text-opacity));
 }
+.hover\:text-brand-gray-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(132 133 138 / var(--tw-text-opacity));
+}
 .hover\:text-brand-green-400:hover{
   --tw-text-opacity: 1;
   color: rgb(51 196 69 / var(--tw-text-opacity));
+}
+.hover\:text-brand-green-500:hover{
+  --tw-text-opacity: 1;
+  color: rgb(0 181 23 / var(--tw-text-opacity));
 }
 .hover\:text-brand-red:hover{
   --tw-text-opacity: 1;
   color: rgb(235 87 87 / var(--tw-text-opacity));
 }
-.hover\:opacity-75:hover{
-  opacity: 0.75;
-}
 .hover\:shadow-inset-border-green:hover{
   --tw-shadow: inset 0 0 0 2px #33C445;
   --tw-shadow-colored: inset 0 0 0 2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.focus\:border:focus{
+  border-width: 1px;
+}
+.focus\:border-brand-gray-400:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(132 133 138 / var(--tw-border-opacity));
+}
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 .group:hover .group-hover\:translate-x-2{
   --tw-translate-x: 0.5rem;
@@ -1825,6 +1972,36 @@ h3{
   --tw-text-opacity: 1;
   color: rgb(28 28 28 / var(--tw-text-opacity));
 }
+.peer:valid ~ .peer-valid\:-translate-x-\[12\%\]{
+  --tw-translate-x: -12%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.peer:valid ~ .peer-valid\:-translate-y-7{
+  --tw-translate-y: -1.75rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.peer:valid ~ .peer-valid\:scale-90{
+  --tw-scale-x: .9;
+  --tw-scale-y: .9;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.peer:focus ~ .peer-focus\:-translate-x-\[12\%\]{
+  --tw-translate-x: -12%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.peer:focus ~ .peer-focus\:-translate-y-9{
+  --tw-translate-y: -2.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.peer:focus ~ .peer-focus\:scale-90{
+  --tw-scale-x: .9;
+  --tw-scale-y: .9;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.peer:focus ~ .peer-focus\:px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
 .peer:focus ~ .peer-focus\:outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1832,8 +2009,19 @@ h3{
 @media (min-width: 576px){
 
 
+  .xs\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+
   .xs\:mt-0{
     margin-top: 0px;
+  }
+
+
+  .xs\:mt-14{
+    margin-top: 3.5rem;
   }
 
 
@@ -1873,11 +2061,6 @@ h3{
   }
 
 
-  .xs\:items-center{
-    align-items: center;
-  }
-
-
   .xs\:py-3{
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
@@ -1900,6 +2083,14 @@ h3{
 
   .sm\:mt-4{
     margin-top: 1rem;
+  }
+
+
+  .sm\:line-clamp-none{
+    overflow: visible;
+    display: block;
+    -webkit-box-orient: horizontal;
+    -webkit-line-clamp: none;
   }
 
 
@@ -1993,15 +2184,15 @@ h3{
 @media (min-width: 768px){
 
 
-  .md\:-mx-0{
-    margin-left: -0px;
-    margin-right: -0px;
-  }
-
-
   .md\:-mx-7{
     margin-left: -1.75rem;
     margin-right: -1.75rem;
+  }
+
+
+  .md\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
 
@@ -2072,6 +2263,11 @@ h3{
   }
 
 
+  .md\:w-9{
+    width: 2.25rem;
+  }
+
+
   .md\:w-full{
     width: 100%;
   }
@@ -2094,6 +2290,16 @@ h3{
 
   .md\:max-w-80{
     max-width: 20rem;
+  }
+
+
+  .md\:max-w-\[37\.6875rem\]{
+    max-width: 37.6875rem;
+  }
+
+
+  .md\:max-w-\[20\.4375rem\]{
+    max-width: 20.4375rem;
   }
 
 
@@ -2140,6 +2346,13 @@ h3{
   }
 
 
+  .md\:space-y-2 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+  }
+
+
   .md\:whitespace-nowrap{
     white-space: nowrap;
   }
@@ -2163,6 +2376,12 @@ h3{
   .md\:px-30{
     padding-left: 1.875rem;
     padding-right: 1.875rem;
+  }
+
+
+  .md\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
 
@@ -2309,6 +2528,11 @@ h3{
   }
 
 
+  .lg\:mt-16{
+    margin-top: 4rem;
+  }
+
+
   .lg\:block{
     display: block;
   }
@@ -2350,6 +2574,12 @@ h3{
   .lg\:size-40{
     width: 10rem;
     height: 10rem;
+  }
+
+
+  .lg\:size-6{
+    width: 1.5rem;
+    height: 1.5rem;
   }
 
 
@@ -2408,6 +2638,11 @@ h3{
   }
 
 
+  .lg\:max-w-full{
+    max-width: 100%;
+  }
+
+
   .lg\:flex-none{
     flex: none;
   }
@@ -2438,6 +2673,11 @@ h3{
   }
 
 
+  .lg\:gap-10{
+    gap: 2.5rem;
+  }
+
+
   .lg\:gap-30{
     gap: 1.875rem;
   }
@@ -2445,6 +2685,11 @@ h3{
 
   .lg\:gap-6{
     gap: 1.5rem;
+  }
+
+
+  .lg\:gap-7{
+    gap: 1.75rem;
   }
 
 
@@ -2507,6 +2752,11 @@ h3{
   }
 
 
+  .lg\:p-6{
+    padding: 1.5rem;
+  }
+
+
   .lg\:px-10{
     padding-left: 2.5rem;
     padding-right: 2.5rem;
@@ -2519,9 +2769,9 @@ h3{
   }
 
 
-  .lg\:px-4{
-    padding-left: 1rem;
-    padding-right: 1rem;
+  .lg\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
 
@@ -2614,6 +2864,12 @@ h3{
   }
 
 
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+
   .lg\:text-2xl\/6{
     font-size: 1.5rem;
     line-height: 1.5rem;
@@ -2665,6 +2921,12 @@ h3{
   .lg\:text-base\/\[1\.2rem\]{
     font-size: 1rem;
     line-height: 1.2rem;
+  }
+
+
+  .lg\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
 
