--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -674,6 +674,9 @@ body{
 .\!mt-4{
   margin-top: 1rem !important;
 }
+.-mr-2{
+  margin-right: -0.5rem;
+}
 .mb-0\.5{
   margin-bottom: 0.125rem;
 }
@@ -849,6 +852,10 @@ body{
   width: 2rem;
   height: 2rem;
 }
+.size-\[4\.875rem\]{
+  width: 4.875rem;
+  height: 4.875rem;
+}
 .size-full{
   width: 100%;
   height: 100%;
@@ -900,6 +907,9 @@ body{
 }
 .h-\[19\.75rem\]{
   height: 19.75rem;
+}
+.h-\[25\.875rem\]{
+  height: 25.875rem;
 }
 .h-\[4\.75rem\]{
   height: 4.75rem;
@@ -1049,6 +1059,12 @@ body{
 }
 .max-w-base{
   max-width: 72.875rem;
+}
+.max-w-xl{
+  max-width: 36rem;
+}
+.max-w-\[45\.0625rem\]{
+  max-width: 45.0625rem;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -1224,6 +1240,9 @@ body{
 }
 .overflow-y-auto{
   overflow-y: auto;
+}
+.overflow-y-scroll{
+  overflow-y: scroll;
 }
 .whitespace-nowrap{
   white-space: nowrap;
@@ -1482,6 +1501,12 @@ body{
 .pt-6{
   padding-top: 1.5rem;
 }
+.pl-2{
+  padding-left: 0.5rem;
+}
+.pr-2{
+  padding-right: 0.5rem;
+}
 .text-center{
   text-align: center;
 }
@@ -1514,6 +1539,10 @@ body{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+.text-5xl\/6{
+  font-size: 3rem;
+  line-height: 1.5rem;
 }
 .text-\[0\.625rem\]{
   font-size: 0.625rem;
@@ -1585,6 +1614,9 @@ body{
 }
 .font-semibold{
   font-weight: 600;
+}
+.font-thin{
+  font-weight: 100;
 }
 .leading-6{
   line-height: 1.5rem;
@@ -1929,11 +1961,20 @@ h3{
 
 ::-webkit-scrollbar{
   height: 0.25rem;
-  width: 0.375rem;
+  width: 0.125rem;
+}
+
+@media (min-width: 768px){
+
+
+  ::-webkit-scrollbar{
+    width: 0.375rem;
+  }
 }
 
 /* Track */
 ::-webkit-scrollbar-track{
+  border-radius: 9999px;
   --tw-bg-opacity: 1;
   background-color: rgb(178 232 185 / var(--tw-bg-opacity));
 }
@@ -2150,6 +2191,16 @@ h3{
 @media (min-width: 640px){
 
 
+  .sm\:-right-9{
+    right: -2.25rem;
+  }
+
+
+  .sm\:top-0{
+    top: 0px;
+  }
+
+
   .sm\:mx-0{
     margin-left: 0px;
     margin-right: 0px;
@@ -2182,6 +2233,11 @@ h3{
 
   .sm\:w-auto{
     width: auto;
+  }
+
+
+  .sm\:w-3\/4{
+    width: 75%;
   }
 
 
@@ -2318,6 +2374,12 @@ h3{
   }
 
 
+  .md\:size-24{
+    width: 6rem;
+    height: 6rem;
+  }
+
+
   .md\:size-sixty{
     width: 3.75rem;
     height: 3.75rem;
@@ -2334,8 +2396,18 @@ h3{
   }
 
 
+  .md\:h-\[31\.5625rem\]{
+    height: 31.5625rem;
+  }
+
+
   .md\:w-1\/2{
     width: 50%;
+  }
+
+
+  .md\:w-2\/3{
+    width: 66.666667%;
   }
 
 
@@ -2513,6 +2585,12 @@ h3{
   }
 
 
+  .md\:py-7{
+    padding-top: 1.75rem;
+    padding-bottom: 1.75rem;
+  }
+
+
   .md\:py-8{
     padding-top: 2rem;
     padding-bottom: 2rem;
@@ -2534,6 +2612,11 @@ h3{
   }
 
 
+  .md\:pr-4{
+    padding-right: 1rem;
+  }
+
+
   .md\:pr-5{
     padding-right: 1.25rem;
   }
@@ -2541,6 +2624,16 @@ h3{
 
   .md\:pt-0{
     padding-top: 0px;
+  }
+
+
+  .md\:pl-8{
+    padding-left: 2rem;
+  }
+
+
+  .md\:pr-8{
+    padding-right: 2rem;
   }
 
 
@@ -2674,6 +2767,12 @@ h3{
   }
 
 
+  .lg\:size-\[7\.5rem\]{
+    width: 7.5rem;
+    height: 7.5rem;
+  }
+
+
   .lg\:h-12{
     height: 3rem;
   }
@@ -2686,6 +2785,11 @@ h3{
 
   .lg\:h-\[2\.375rem\]{
     height: 2.375rem;
+  }
+
+
+  .lg\:w-1\/2{
+    width: 50%;
   }
 
 
@@ -2860,9 +2964,21 @@ h3{
   }
 
 
+  .lg\:px-42{
+    padding-left: 2.625rem;
+    padding-right: 2.625rem;
+  }
+
+
   .lg\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+
+  .lg\:py-10{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
   }
 
 
@@ -2940,6 +3056,11 @@ h3{
 
   .lg\:pt-8{
     padding-top: 2rem;
+  }
+
+
+  .lg\:pr-42{
+    padding-right: 2.625rem;
   }
 
 
