--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -654,6 +654,9 @@ body{
 .z-0{
   z-index: 0;
 }
+.z-10{
+  z-index: 10;
+}
 .z-20{
   z-index: 20;
 }
@@ -662,6 +665,9 @@ body{
 }
 .order-last{
   order: 9999;
+}
+.-m-14{
+  margin: -3.5rem;
 }
 .-mx-4{
   margin-left: -1rem;
@@ -688,6 +694,9 @@ body{
 }
 .mb-2\.5{
   margin-bottom: 0.625rem;
+}
+.mb-6{
+  margin-bottom: 1.5rem;
 }
 .ml-1{
   margin-left: 0.25rem;
@@ -924,6 +933,9 @@ body{
   height: -moz-max-content;
   height: max-content;
 }
+.h-14{
+  height: 3.5rem;
+}
 .max-h-\[32rem\]{
   max-height: 32rem;
 }
@@ -967,6 +979,12 @@ body{
   width: -moz-max-content;
   width: max-content;
 }
+.w-48{
+  width: 12rem;
+}
+.w-\[6\.25rem\]{
+  width: 6.25rem;
+}
 .min-w-52{
   min-width: 13rem;
 }
@@ -990,9 +1008,6 @@ body{
 }
 .max-w-5xl{
   max-width: 64rem;
-}
-.max-w-64{
-  max-width: 16rem;
 }
 .max-w-80{
   max-width: 20rem;
@@ -1030,6 +1045,9 @@ body{
 .max-w-\[43\.625rem\]{
   max-width: 43.625rem;
 }
+.max-w-\[45\.0625rem\]{
+  max-width: 45.0625rem;
+}
 .max-w-\[45\.625rem\]{
   max-width: 45.625rem;
 }
@@ -1063,8 +1081,17 @@ body{
 .max-w-xl{
   max-width: 36rem;
 }
-.max-w-\[45\.0625rem\]{
-  max-width: 45.0625rem;
+.max-w-md{
+  max-width: 28rem;
+}
+.max-w-\[33\.875rem\]{
+  max-width: 33.875rem;
+}
+.max-w-\[9\.3125rem\]{
+  max-width: 9.3125rem;
+}
+.max-w-\[3\.625rem\]{
+  max-width: 3.625rem;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -1307,6 +1334,10 @@ body{
   --tw-border-opacity: 1;
   border-color: rgb(150 150 150 / var(--tw-border-opacity));
 }
+.border-brand-black-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(28 28 28 / var(--tw-border-opacity));
+}
 .border-brand-gray-400{
   --tw-border-opacity: 1;
   border-color: rgb(132 133 138 / var(--tw-border-opacity));
@@ -1330,6 +1361,10 @@ body{
 .border-transparent{
   border-color: transparent;
 }
+.border-gray-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
 .bg-\[\#020202\]\/20{
   background-color: rgb(2 2 2 / 0.2);
 }
@@ -1344,6 +1379,10 @@ body{
 .bg-brand-black-100{
   --tw-bg-opacity: 1;
   background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+.bg-brand-dark{
+  --tw-bg-opacity: 1;
+  background-color: rgb(84 84 84 / var(--tw-bg-opacity));
 }
 .bg-brand-green-100{
   --tw-bg-opacity: 1;
@@ -1471,6 +1510,9 @@ body{
 .pr-1{
   padding-right: 0.25rem;
 }
+.pr-2{
+  padding-right: 0.5rem;
+}
 .pr-3{
   padding-right: 0.75rem;
 }
@@ -1501,11 +1543,8 @@ body{
 .pt-6{
   padding-top: 1.5rem;
 }
-.pl-2{
-  padding-left: 0.5rem;
-}
-.pr-2{
-  padding-right: 0.5rem;
+.text-left{
+  text-align: left;
 }
 .text-center{
   text-align: center;
@@ -1539,6 +1578,10 @@ body{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+.text-40{
+  font-size: 2.5rem;
+  line-height: 3rem;
 }
 .text-5xl\/6{
   font-size: 3rem;
@@ -1621,6 +1664,9 @@ body{
 .leading-6{
   line-height: 1.5rem;
 }
+.leading-\[1\]{
+  line-height: 1;
+}
 .tracking-wides{
   letter-spacing: -0.0125rem;
 }
@@ -1692,6 +1738,10 @@ body{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
 .underline{
   text-decoration-line: underline;
 }
@@ -1704,6 +1754,16 @@ body{
 .shadow-inset-border-green{
   --tw-shadow: inset 0 0 0 2px #33C445;
   --tw-shadow-colored: inset 0 0 0 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none{
@@ -1799,16 +1859,33 @@ h3{
 }
 
 /* Radio Input Styles */
+.cart-radio:checked+label div{
+  --tw-border-opacity: 1;
+  border-color: rgb(51 196 69 / var(--tw-border-opacity));
+}
 .cart-radio:checked+label div span{
   display: block;
 }
 
 .cart-radio:checked+label div,
 .cart-radio:checked~label{
-  --tw-border-opacity: 1;
-  border-color: rgb(235 87 87 / var(--tw-border-opacity));
   --tw-text-opacity: 1;
-  color: rgb(235 87 87 / var(--tw-text-opacity));
+  color: rgb(51 196 69 / var(--tw-text-opacity));
+}
+
+/* 2 */
+.radio-dark:checked+label div{
+  --tw-border-opacity: 1;
+  border-color: rgb(84 84 84 / var(--tw-border-opacity));
+}
+.radio-dark:checked+label div span{
+  display: block;
+}
+
+.radio-dark:checked+label div,
+.radio-dark:checked~label{
+  --tw-text-opacity: 1;
+  color: rgb(51 196 69 / var(--tw-text-opacity));
 }
 
 .checkbox-custom{
@@ -2028,6 +2105,13 @@ h3{
   --tw-text-opacity: 1;
   color: rgb(235 87 87 / var(--tw-text-opacity));
 }
+.hover\:text-gray-700:hover{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.hover\:text-opacity-80:hover{
+  --tw-text-opacity: 0.8;
+}
 .hover\:opacity-80:hover{
   opacity: 0.8;
 }
@@ -2236,11 +2320,6 @@ h3{
   }
 
 
-  .sm\:w-3\/4{
-    width: 75%;
-  }
-
-
   .sm\:min-w-56{
     min-width: 14rem;
   }
@@ -2406,11 +2485,6 @@ h3{
   }
 
 
-  .md\:w-2\/3{
-    width: 66.666667%;
-  }
-
-
   .md\:w-8{
     width: 2rem;
   }
@@ -2489,6 +2563,12 @@ h3{
   .md\:gap-x-10{
     -moz-column-gap: 2.5rem;
          column-gap: 2.5rem;
+  }
+
+
+  .md\:gap-x-8{
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
 
 
@@ -2622,23 +2702,24 @@ h3{
   }
 
 
-  .md\:pt-0{
-    padding-top: 0px;
-  }
-
-
-  .md\:pl-8{
-    padding-left: 2rem;
-  }
-
-
   .md\:pr-8{
     padding-right: 2rem;
   }
 
 
+  .md\:pt-0{
+    padding-top: 0px;
+  }
+
+
   .md\:text-left{
     text-align: left;
+  }
+
+
+  .md\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
   }
 
 
@@ -2694,6 +2775,11 @@ h3{
 
   .lg\:mt-3{
     margin-top: 0.75rem;
+  }
+
+
+  .lg\:mt-30{
+    margin-top: 1.875rem;
   }
 
 
@@ -2785,11 +2871,6 @@ h3{
 
   .lg\:h-\[2\.375rem\]{
     height: 2.375rem;
-  }
-
-
-  .lg\:w-1\/2{
-    width: 50%;
   }
 
 
@@ -2906,6 +2987,11 @@ h3{
   }
 
 
+  .lg\:gap-y-6{
+    row-gap: 1.5rem;
+  }
+
+
   .lg\:gap-y-8{
     row-gap: 2rem;
   }
@@ -2952,6 +3038,12 @@ h3{
   }
 
 
+  .lg\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+
   .lg\:px-10{
     padding-left: 2.5rem;
     padding-right: 2.5rem;
@@ -2991,6 +3083,12 @@ h3{
   .lg\:py-4{
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+
+  .lg\:py-6{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 
 
@@ -3039,6 +3137,11 @@ h3{
   }
 
 
+  .lg\:pr-42{
+    padding-right: 2.625rem;
+  }
+
+
   .lg\:pr-5{
     padding-right: 1.25rem;
   }
@@ -3049,18 +3152,8 @@ h3{
   }
 
 
-  .lg\:pt-30{
-    padding-top: 1.875rem;
-  }
-
-
   .lg\:pt-8{
     padding-top: 2rem;
-  }
-
-
-  .lg\:pr-42{
-    padding-right: 2.625rem;
   }
 
 
@@ -3109,6 +3202,11 @@ h3{
   .lg\:text-\[1\.375rem\]\/\[1\]{
     font-size: 1.375rem;
     line-height: 1;
+  }
+
+
+  .lg\:text-\[3\.75rem\]{
+    font-size: 3.75rem;
   }
 
 
@@ -3175,6 +3273,11 @@ h3{
   .lg\:text-xl\/6{
     font-size: 1.25rem;
     line-height: 1.5rem;
+  }
+
+
+  .lg\:text-\[5rem\]{
+    font-size: 5rem;
   }
 }
 @media (min-width: 1280px){
