--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -611,9 +611,6 @@ body{
 .pointer-events-none{
   pointer-events: none;
 }
-.visible{
-  visibility: visible;
-}
 .fixed{
   position: fixed;
 }
@@ -660,12 +657,6 @@ body{
 .top-1\/2{
   top: 50%;
 }
-.left-10{
-  left: 2.5rem;
-}
-.left-2{
-  left: 0.5rem;
-}
 .z-0{
   z-index: 0;
 }
@@ -691,10 +682,6 @@ body{
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
-}
-.\!mx-auto{
-  margin-left: auto !important;
-  margin-right: auto !important;
 }
 .\!mt-4{
   margin-top: 1rem !important;
@@ -776,12 +763,6 @@ body{
 }
 .mt-8{
   margin-top: 2rem;
-}
-.\!mt-16{
-  margin-top: 4rem !important;
-}
-.\!mt-20{
-  margin-top: 5rem !important;
 }
 .line-clamp-1{
   overflow: hidden;
@@ -1022,6 +1003,9 @@ body{
 .w-max{
   width: -moz-max-content;
   width: max-content;
+}
+.w-48{
+  width: 12rem;
 }
 .min-w-52{
   min-width: 13rem;
@@ -1302,6 +1286,9 @@ body{
 .overflow-y-auto{
   overflow-y: auto;
 }
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
 .overflow-y-scroll{
   overflow-y: scroll;
 }
@@ -1328,6 +1315,14 @@ body{
 }
 .rounded-sm{
   border-radius: 0.125rem;
+}
+.rounded-l-md{
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+.rounded-r-md{
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
 }
 .border{
   border-width: 1px;
@@ -2491,6 +2486,11 @@ h3{
   }
 
 
+  .md\:-mr-2{
+    margin-right: -0.5rem;
+  }
+
+
   .md\:mt-10{
     margin-top: 2.5rem;
   }
@@ -2513,16 +2513,6 @@ h3{
 
   .md\:mt-6{
     margin-top: 1.5rem;
-  }
-
-
-  .md\:mt-16{
-    margin-top: 4rem;
-  }
-
-
-  .md\:mt-8{
-    margin-top: 2rem;
   }
 
 
@@ -2863,8 +2853,8 @@ h3{
   }
 
 
-  .lg\:ml-1{
-    margin-left: 0.25rem;
+  .lg\:\!mt-20{
+    margin-top: 5rem !important;
   }
 
 
@@ -2920,11 +2910,6 @@ h3{
 
   .lg\:mt-9{
     margin-top: 2.25rem;
-  }
-
-
-  .lg\:\!mt-20{
-    margin-top: 5rem !important;
   }
 
 
