--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -686,9 +686,6 @@ body{
 .\!mt-4{
   margin-top: 1rem !important;
 }
-.-mr-2{
-  margin-right: -0.5rem;
-}
 .mb-0\.5{
   margin-bottom: 0.125rem;
 }
@@ -796,6 +793,9 @@ body{
 }
 .grid{
   display: grid;
+}
+.contents{
+  display: contents;
 }
 .hidden{
   display: none;
@@ -988,6 +988,9 @@ body{
 .w-42{
   width: 2.625rem;
 }
+.w-48{
+  width: 12rem;
+}
 .w-5{
   width: 1.25rem;
 }
@@ -1003,9 +1006,6 @@ body{
 .w-max{
   width: -moz-max-content;
   width: max-content;
-}
-.w-48{
-  width: 12rem;
 }
 .min-w-52{
   min-width: 13rem;
@@ -1285,9 +1285,6 @@ body{
 }
 .overflow-y-auto{
   overflow-y: auto;
-}
-.overflow-x-hidden{
-  overflow-x: hidden;
 }
 .overflow-y-scroll{
   overflow-y: scroll;
@@ -1825,6 +1822,9 @@ body{
 .duration-200{
   transition-duration: 200ms;
 }
+.duration-300{
+  transition-duration: 300ms;
+}
 .ease-in-out{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1898,11 +1898,55 @@ h3{
   border-color: rgb(88 87 87 / var(--tw-border-opacity));
 }
 
+.rotate svg{
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.tab-active{
+  display: block;
+  width: 100%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 247 231 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: left;
+}
+
+.tab-noactive{
+  display: block;
+  width: 100%;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: left;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 200ms;
+}
+
+.tab-noactive:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 247 231 / var(--tw-bg-opacity));
+}
+
+
 /* Radio Input Styles */
 .cart-radio:checked+label div{
   --tw-border-opacity: 1;
   border-color: rgb(51 196 69 / var(--tw-border-opacity));
 }
+
 .cart-radio:checked+label div span{
   display: block;
 }
@@ -1918,6 +1962,7 @@ h3{
   --tw-border-opacity: 1;
   border-color: rgb(84 84 84 / var(--tw-border-opacity));
 }
+
 .radio-dark:checked+label div span{
   display: block;
 }
@@ -2376,11 +2421,6 @@ h3{
     display: block;
     -webkit-box-orient: horizontal;
     -webkit-line-clamp: none;
-  }
-
-
-  .sm\:block{
-    display: block;
   }
 
 
